src/css/popup.css
/* General */

body {
  max-width: 500px;
  background-color: #272A2F;
  color: #ebebeb;
}

a {
  color: #F36;
  text-decoration: none;
  cursor: pointer;
}

.hidden {
  display: none;
}

.timeago,
.message
{
  color: #888;
}

.timeago {
  text-align: right;
}

#notification-list,
#full-list,
#empty-list,
#error,
#team-info
{
  padding: 1em;
  text-align: center;
}

.bottom-link {
  display: block;
  margin-top: 0.8em;
  padding: 0.5em;
  border-top: 1px solid #525a65;
  text-align: center;
  font-size: 14px;
  color: #aaa;
}

.bottom-link:hover {
  background-color: #3f4752;
  color: #fff;
}

/* Notifications list */

#notification-list {
  list-style: none;
}

#notification-list li {
  padding: 0.5em;
  margin-bottom: 0.1em;
  background-color: #333941;
}

#notification-list li:hover {
  background-color: #3f4752;
}

/* Empty list */

#empty-list img {
  max-height: 7em;
  padding-bottom: 0.5em;
}

#empty-list p,
#error p
{
  text-align: center;
}

#empty-list .title,
#empty-list .description,
#error p
{
  margin: 0;
  padding: 0;
}

#empty-list .description,
#error .description
{
  padding-top: 0.25em;
  font-size: 12px;
  color: #aaa;
}

#empty-list .title,
#error .title
{
  font-size: 16px;
  color: #ebebeb;
}

/* Team info */
#team-info h1 {
  padding: 0;
  margin: 0;
}
#team-info h1 .name {
  color: #ebebeb;
}
#team-info h1 .code {
  color: #7bc876;
  font-weight: normal;
}
#team-info ul {
  padding: 0;
  margin: 1em;
  list-style-type: none;
  color: #aaa;
}
#team-info li::before {
  display: inline-block;
  content: '';
  border-radius: 0.1em;
  width: 0.7em;
  height: 0.7em;
  margin-right: 0.5em;
}
#team-info li.translated::before {
  background-color: #7bc876;
}
#team-info li.suggested::before {
  background-color: #4fc4f6;
}
#team-info li.fuzzy::before {
  background-color: #fed271;
}
#team-info li.missing::before {
  background-color: #4d5967;
}
#team-info li .title {
  text-transform: uppercase;
}
#team-info li .count {
  float: right;
}

